testdata/baselines/reference/submodule/conformance/nodeModulesTripleSlashReferenceModeDeclarationEmit5(module=node16).errors.txt
/index.ts(3,41): error TS2304: Cannot find name 'ImportInterface'.


==== /index.ts (1 errors) ====
    /// <reference types="pkg" resolution-mode="import" preserve="true" />
    /// <reference types="pkg" resolution-mode="require" preserve="true" />
    export interface LocalInterface extends ImportInterface, RequireInterface {}
                                            ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ImportInterface'.
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        interface ImportInterface {}
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        interface RequireInterface {}
    }